--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,23 +14,77 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* img {
+  max-width: 100%;
+  height: auto;
+} */
+
 body {
+  margin: 0;
+  min-height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 21px;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+  margin: 0 auto;
+  background: #ffffff;;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.20);
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .visually-hidden {
-  visibility: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.navigation {
+  padding: 0 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .list {
   list-style-type: none;
 }
 
+.navigation-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+
 .navigation-link {
+  padding: 20px 16px;
+
   color: #000000;
   font-size: 20px;
   font-weight: 700;
@@ -65,14 +119,24 @@ body {
 }
 
 .hero {
+  min-height: 485px;
   background-color: #82b3d3;
   background-image: url("../images/index-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
+.city-name {
+  display: block;
+
+}
+
 .advantages-header {
   text-align: center;
+  padding: 69px 0 69px 0;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .title {
@@ -82,17 +146,37 @@ body {
   text-transform: uppercase;
 }
 
+.advantages-title {
+  margin: 0 auto;
+  margin-bottom: 25px;
+  width: 620px;
+}
+
 .description {
   line-height: 26px;
+  margin: 0;
+}
+
+.features-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .features-item {
   background-color: rgba(131, 179, 211, 0.12);
   font-size: 18px;
   text-align: center;
+  padding: 103px 85px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .features-item h3 {
+  width: 175px;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
@@ -109,6 +193,10 @@ body {
 
 .features-item:nth-of-type(3) {
   background-color: rgba(131, 179, 211, 0.20);
+}
+
+.features-description {
+  width: 230px;
 }
 
 .service-header {
