Добавляет множественный фон и паддинг в секции hero

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,11 +24,6 @@ html {
   box-sizing: border-box;
 }
 
-/* img {
-  max-width: 100%;
-  height: auto;
-} */
-
 body {
   margin: 0;
   min-height: 100%;
@@ -37,6 +32,17 @@ body {
   line-height: 21px;
   color: #333333;
   background-color: #f2f2f2;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .page-container {
@@ -52,23 +58,18 @@ body {
   flex-grow: 1;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .navigation {
   padding: 0 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
 
+.navigation-logo {
+  display: block;
+  margin-bottom: -6px;
+  position: relative;
+  z-index: 2;
 }
 
 .list {
@@ -116,19 +117,18 @@ body {
 
 .navigation-user {
   text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .hero {
-  min-height: 485px;
+  padding: 51px 371px 82px 371px;
   background-color: #82b3d3;
-  background-image: url("../images/index-background.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.city-name {
-  display: block;
-
+  background-image: url("../images/vector.svg"), url("../images/index-background.jpg");
+  background-size: contain, cover;
+  background-position: bottom center;
+  background-repeat: no-repeat, no-repeat;
 }
 
 .advantages-header {
