--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,6 +109,14 @@ body {
   text-decoration: none;
 }
 
+.navigation-link:hover {
+  color: #756257;
+  text-decoration: underline;
+  text-underline-offset: 20px;
+  text-decoration-thickness: 2px;
+  text-underline-position: under;
+}
+
 .button {
   display: inline-block;
   padding: 8px 50px;
@@ -123,6 +131,7 @@ body {
   line-height: 20px;
   text-transform: uppercase;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .button-search {
@@ -139,7 +148,7 @@ body {
 }
 
 .navigation-choice .navigation-link {
-  padding: 22px 12px;
+  padding: 20px 12px;
   min-width: 20px;
   min-height: 20px;
 }
@@ -227,6 +236,10 @@ body {
   background-color: rgba(131, 179, 211, 0.20);
 }
 
+.features-item-middle {
+  gap: 60px;
+}
+
 .features-item h3 {
   width: 175px;
   font-size: 24px;
@@ -251,15 +264,36 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 60px;
 }
 
 .town-text h3, .bridge-text h3{
   color: #ffffff;
 }
 
+.features-title {
+  position: relative;
+  margin: 0;
+}
+
+.features-title::before {
+  content: "";
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  width: 60px;
+  height: 2px;
+  margin-left: -30px;
+  background-color: rgba(255, 255, 255, 0.30);
+}
+
+.features-item-middle > .features-title::before {
+  background-color: rgba(0, 0, 0, 0.30);
+}
 
 .features-description {
   width: 230px;
+  margin: 0;
 }
 
 .features-img {
@@ -286,7 +320,7 @@ body {
 }
 
 .service-item {
-  padding: 80px 85px;
+  padding: 183px 85px 80px;
   background-color: rgba(131, 179, 211, 0.12);
   font-size: 18px;
   text-align: center;
@@ -306,6 +340,18 @@ body {
   text-transform: uppercase;
   color: #000000;
   margin: 0;
+}
+
+.service-title {
+  position: relative;
+}
+
+.service-title::before {
+  position: absolute;
+  background-image: url("../images/advantage-icon-1.svg");
+  background-repeat: no-repeat;
+  background-size: 75px 72px;
+  background-position: center top 20px;
 }
 
 .service-description {
@@ -383,14 +429,13 @@ body {
   padding: 0;
 }
 
-.social-item {
+.social-link {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-evenly;
   width: 48px;
   height: 40px;
-}
-
-.social-link {
-  display: block;
-  padding: 10px;
 }
 
 .page-footer-phone-link {
@@ -502,6 +547,7 @@ body {
 }
 
 .cost-text {
+  font-family: inherit;
   padding: 12px 20px;
   border-radius: 4px 0 0 4px;
   background: #f2f2f2;
@@ -568,6 +614,10 @@ body {
 }
 
 .catalog-select {
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
   width: 292px;
   padding: 14px 20px;
   border-radius: 4px;
