--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,6 @@ body {
   flex-wrap: wrap;
   align-items: center;
   gap: 30px;
-
 }
 
 .navigation-logo {
@@ -110,7 +109,7 @@ body {
 }
 
 .navigation-link:hover {
-  color: #756257;
+  text-decoration-color: #756257;
   text-decoration: underline;
   text-underline-offset: 20px;
   text-decoration-thickness: 2px;
@@ -122,7 +121,6 @@ body {
   padding: 8px 50px;
   border-radius: 4px;
   background-color:#756157;
-
   font-family: inherit;
   color: #ffffff;
   text-align: center;
@@ -132,6 +130,19 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
+}
+
+.button:hover, .button:focus {
+  background-color: #615048;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .button-search {
@@ -178,12 +189,25 @@ body {
 }
 
 .hero {
+  position: relative;
   padding: 51px 371px 82px 371px;
   background-color: #82b3d3;
-  background-image: url("../images/vector.svg"), url("../images/index-background.jpg");
-  background-size: contain, cover;
-  background-position: bottom center;
-  background-repeat: no-repeat, no-repeat;
+  background-image: url("../images/index-background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.hero::after {
+  position: absolute;
+  content: "";
+  background-image: url("../images/vector.svg");
+  background-size: cover;
+  background-position: bottom;
+  width: 1200px;
+  height: 57px;
+  left: 0;
+  bottom: 0;
 }
 
 .advantages-header {
@@ -255,7 +279,6 @@ body {
   color: #ffffff;
   padding: 0;
   width: 100%;
-
 }
 
 .town-text, .bridge-text {
@@ -265,6 +288,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 60px;
+  min-height: 385px;
 }
 
 .town-text h3, .bridge-text h3{
@@ -316,11 +340,10 @@ body {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .service-item {
-  padding: 183px 85px 80px;
+  padding: 182px 85px 80px;
   background-color: rgba(131, 179, 211, 0.12);
   font-size: 18px;
   text-align: center;
@@ -334,28 +357,41 @@ body {
   background-color: #ffffff;
 }
 
-.service-item h3 {
+.service-heading {
+  display: flex;
+  justify-content: center;
+  position: relative;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
   color: #000000;
   margin: 0;
+  min-width: 230px;
 }
 
-.service-title {
-  position: relative;
-}
-
-.service-title::before {
+.service-heading::before {
+  content: '';
+  width: 75px;
+  height: 72px;
   position: absolute;
   background-image: url("../images/advantage-icon-1.svg");
   background-repeat: no-repeat;
-  background-size: 75px 72px;
-  background-position: center top 20px;
+  top: -102px;
+}
+
+.service-heading-meal::before {
+  background-image: url("../images/advantage-icon-2.svg");
+}
+
+.service-heading-souvenir::before {
+  background-image: url("../images/advantage-icon-3.svg");
+  width: 76px;
+  height: 76px
 }
 
 .service-description {
   margin: 0;
+  min-width: 230px;
 }
 
 .search {
@@ -398,20 +434,36 @@ body {
 
 .subscribe-form {
   display: flex;
+  width: 100%;
 }
 
 .field {
+  font-family: "PT Sans", sans-serif;
   border: none;
   padding: 12px 20px;
   align-items: center;
   border-radius: 4px 0 0 4px;
   background: #f2f2f2;
+  flex: 1 0 0;
+  font-size: 18px;
+  line-height: 24px
 }
 
 .button-subscribe {
   border: none;
   border-radius: 0 4px 4px 0;
   background: #82b3d3;
+  font-size: 20px;
+  line-height: 36px;
+}
+
+.button-subscribe:hover, .button-subscribe:focus {
+  background-color: #68a2ca;
+}
+
+.button-subscribe:active {
+  background-color: #82b3d3;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .page-footer {
@@ -433,9 +485,18 @@ body {
   display: flex;
   padding: 10px;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 48px;
   height: 40px;
+  color: #83b3d3;
+}
+
+.social-link:hover, .social-link:focus {
+  color: #68a2ca;
+}
+
+.social-link:active {
+  color: rgba(104, 162, 202, 0.3);
 }
 
 .page-footer-phone-link {
@@ -446,6 +507,18 @@ body {
   text-decoration: none;
 }
 
+.page-footer-logo-link {
+  color: #000000;
+}
+
+.page-footer-phone-link:hover, .page-footer-phone-link:focus,
+.page-footer-logo-link:hover, .page-footer-logo-link:focus {
+  color: #756157;
+}
+
+.page-footer-phone-link:active, .page-footer-logo-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
 .filter {
   padding: 35px 70px 70px 70px;
   background-color: #82b3d3;
@@ -465,12 +538,43 @@ body {
 .filter-breadcrumbs {
   display: flex;
   gap: 10px;
+  align-items: center;
+  padding: 0;
   margin: 0;
   margin-bottom: 40px;
 }
 
-.breadcrumbs-link {
+.breadcrumbs-home {
+  display: flex;
+}
+
+.breadcrumbs-hotel {
   font-size: 16px;
+  position: relative;
+  padding-left: 18px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.breadcrumbs-hotel::before {
+  content: '';
+  width: 8px;
+  height: 17px;
+  position: absolute;
+  background-image: url("../images/breadcrumbs.svg");
+  background-repeat: no-repeat;
+  left: 0;
+  right: auto;
+  margin: 0 auto;
+}
+
+.breadcrumbs-hotel:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-hotel:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .filter-catalog {
@@ -501,6 +605,7 @@ body {
 .control-list {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 16px;
 
   font-size: 18px;
@@ -515,9 +620,66 @@ body {
   gap: 16px;
 }
 
-.control-input {
+.control-item:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.control-item:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.control-input[type="checkbox"] {
+  background-color: #ffffff;
+  border-radius: 4px;
+  appearance: none;
   width: 20px;
   height: 20px;
+  margin: 0;
+  cursor: pointer;
+}
+
+.control-input[type="checkbox"]:hover {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.control-input[type="checkbox"]:active {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.control-input[type="checkbox"]:checked {
+  background-image: url("../images/tick.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px 20px;
+}
+
+.control-label {
+  cursor: pointer;
+}
+
+.control-input[type="radio"] {
+  background-color: #ffffff;
+  border-radius: 10px;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  cursor: pointer;
+}
+
+.control-input[type="radio"]:hover {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.control-input[type="radio"]:active {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.control-input[type="radio"]:checked {
+  background-image: url("../images/tick-radio.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px 20px;
 }
 
 .filter-cost {
@@ -551,23 +713,67 @@ body {
   padding: 12px 20px;
   border-radius: 4px 0 0 4px;
   background: #f2f2f2;
-
   color: #000000;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
   width: 143px;
   border: none;
+  cursor: pointer;
+}
+
+.cost-text:hover, .cost-text:focus{
+  background: #e6e6e6;
 }
 
 .cost-text-before {
   border-radius: 0 4px 4px 0;
 }
 
-.slider input {
-  width: 287px;
+.range-scale {
+  position: relative;
   height: 4px;
+  background-color: #60686c;
+  border-radius: 2px;
+  margin: 8px 0;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+  left: 0;
+  width: 226px
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
   color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.range-toggle:hover {
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
+
+.range-toggle:active {
+  border: 2px solid #83b3d3;
+  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.40);
+}
+
+.toggle-min {
+  top: -8px;
+  left: 0;
+}
+
+.toggle-max {
+  top: -8px;
+  right: 0;
 }
 
 .filter-button {
@@ -577,14 +783,38 @@ body {
   gap: 32px;
 }
 
-.button-submit {
+.button-submit, .button-card-favourit {
   border: none;
   background: #82b3d3;
 }
 
+.button-submit:hover, .button-card-favourit:hover,
+.button-submit:focus, .button-card-favourit:focus {
+  background: #68a2ca;
+}
+
+.button-submit:active, .button-card-favourit:active {
+  background: #82b3d3;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .button-reset {
-  border: none;
   background: none;
+  border: none;
+}
+
+.button-reset:hover {
+  background: none;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.button-reset:focus {
+  background: none;
+  border: none;
+}
+
+.button-reset:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .catalog {
@@ -622,6 +852,16 @@ body {
   padding: 14px 20px;
   border-radius: 4px;
   border: 2px solid #e5e5e5;
+  cursor: pointer;
+  appearance: none;
+  background-image: url(../images/down-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+  background-size: 12px 9px;
+}
+
+.catalog-select:hover {
+  border: 2px solid #68a2ca;
 }
 
 .catalog-mode {
@@ -630,14 +870,19 @@ body {
 }
 
 .button-catalog {
-  display: block;
-  text-align: center;
-  padding: 12px 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 14px 12px;
   text-decoration: none;
   border-radius: 4px;
   border: 2px solid #e5e5e5;
   width: 48px;
   height: 48px;
+}
+
+.button-catalog:hover, .button-catalog:active {
+  border: 2px solid #000000;
 }
 
 .button-catalog-card {
@@ -710,10 +955,6 @@ body {
 
 .button-card-detail, .button-card-favourit {
   padding: 8px 23px;
-}
-
-.button-card-favourit {
-  background: #82b3d3;
 }
 
 .button-card-added {
