--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,7 @@ body {
 .navigation-menu {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   gap: 28px;
 }
 
@@ -80,7 +80,7 @@ body {
   position: relative;
   z-index: 2;
   display: block;
-  margin-bottom: -10px;
+  margin-bottom: -9px;
 }
 
 .page-header-logo {
@@ -200,7 +200,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 7px 12px;
+  padding: 15px 21px;
   min-width: 20px;
   min-height: 20px;
 }
@@ -209,8 +209,17 @@ body {
   opacity: 0.3;
 }
 
-.heart {
+.navigation-search {
+  background-image: url("../images/search.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.navigation-heart {
   position: relative;
+  background-image: url("../images/heart.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .heart-quantity {
@@ -573,6 +582,7 @@ body {
 .page-footer-phone {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   width: 350px;
 }
 
@@ -1354,6 +1364,24 @@ body {
 
 .button-catalog-card {
   border-color: #000000;
+  background-image: url("../images/mode-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 14px;
+}
+
+.button-catalog-slide {
+  background-image: url("../images/mode-2.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 14px;
+}
+
+.button-catalog-list {
+  background-image: url("../images/mode-3.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 14px;
 }
 
 .catalog-list {
@@ -1554,7 +1582,7 @@ body {
 }
 
 .subscribe-catalog .subscribe-title {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 
   color: #000000;
   font-size: 30px;
